# neoengine

./: .gitignore  Anchor.toml  App.tsx  Cargo.toml  app.json  index.js  metro.config.js  package-lock.json  package.json  tsconfig.json
README/: BACKEND.md  CONTRACTS.md  CONTRIBUTING.md  FINAL-ROADMAP.md  FRONTEND.md  MASTER.md  README.md  SETUP.md
android/: settings.gradle
android/app/: build.gradle
android/app/src/debug/java/com/neoengine/: ReactNativeFlipper.java
android/app/src/main/java/com/neoengine/: MainActivity.java  MainApplication.java
android/app/src/main/res/values/: strings.xml
android/app/src/release/java/com/neoengine/: ReactNativeFlipper.java
components/: FinalizeProfile.tsx  ProfileIcon.tsx  PublicProfile.tsx
components/providers/: ConnectionProvider.tsx
frontend-integration/: dsx-scoring-client.ts  profile-nft-client.ts  react-native-integration.tsx
hooks/: useUserProfile.ts
ios/: Podfile  link-assets-manifest.json
ios/neoengine/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/neoengine.xcodeproj/: project.pbxproj
ios/neoengine.xcodeproj/xcshareddata/xcschemes/: neoengine.xcscheme
ios/neoengine.xcworkspace/: contents.xcworkspacedata
ios/neoengineTests/: neoengineTests.m
programs/neoengine-achievements/: Cargo.toml
programs/neoengine-achievements/src/: lib.rs
programs/neoengine-bandwidth/: Cargo.toml
programs/neoengine-bandwidth/src/: lib.rs
programs/neoengine-core/: Cargo.toml
programs/neoengine-core/src/: lib.rs
programs/neoengine-cosmetics/: Cargo.toml
programs/neoengine-cosmetics/src/: lib.rs
programs/neoengine-cpu/: Cargo.toml
programs/neoengine-cpu/src/: lib.rs
programs/neoengine-gpu/: Cargo.toml
programs/neoengine-gpu/src/: lib.rs
programs/neoengine-guilds/: Cargo.toml
programs/neoengine-guilds/src/: lib.rs
programs/neoengine-identity/: Cargo.toml
programs/neoengine-identity/src/: lib.rs
programs/neoengine-linking/: Cargo.toml
programs/neoengine-linking/src/: lib.rs
programs/neoengine-profile/: Cargo.toml
programs/neoengine-profile/src/: lib.rs
programs/neoengine-ram/: Cargo.toml
programs/neoengine-ram/src/: lib.rs
programs/neoengine-resources/: Cargo.toml
programs/neoengine-resources/src/: lib.rs
programs/neoengine-rewards/: Cargo.toml
programs/neoengine-rewards/src/: lib.rs
programs/neoengine-social/: Cargo.toml
programs/neoengine-social/src/: lib.rs
programs/neoengine-storage/: Cargo.toml
programs/neoengine-storage/src/: lib.rs
screens/: ConfirmPasscode.tsx  Connect.tsx  CreatePasscode.tsx  CreatePost.tsx  CreateProfile.tsx  CreateUsername.tsx  EnterPasscode.tsx  Home.tsx  Initiated.tsx  Login.tsx  Profile.tsx  ProfileView.tsx  ResetPasscode.tsx  Search.tsx  Security.tsx  Settings.tsx  Slide1.tsx  Slide2.tsx  Slide3.tsx  Social.tsx  Splash.tsx  Splash2.tsx  Swap.tsx  Swipe.tsx  Thread.tsx  Wallet.tsx
tests/: neoengine-identity.ts
utils/: authFlow.ts  clearStorage.ts  identityContract.ts  imageUtils.ts  ipfs.ts  localStorage.ts  neoengineContracts.ts  pinStorage.ts  profileContract.ts  supabase.ts  usernameContract.ts  usernameStorage.ts
