[workspace]
members = [
    "programs/neoengine-identity",
    "programs/neoengine-profile"
]
exclude = [
    "programs/neoengine-cosmetics", 
    "programs/dsx-scoring",
    "programs/cosmetic-nft"
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
mpl-bubblegum = "1.0.0"
spl-account-compression = "0.3.0"
spl-noop = "0.2.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1