[package]
name = "neoengine-bandwidth"
version = "0.1.0"
description = "Bandwidth sharing for global CDN acceleration network"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "neoengine_bandwidth"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"