[package]
name = "neoengine-core"
version = "0.1.0"
description = "NeoSync protocol and central coordination hub"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "neoengine_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"