[package]
name = "neoengine-cosmetics"
version = "0.1.0"
description = "NeoEngine Cosmetic NFT system with staking/inventory management"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "neoengine_cosmetics"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
mpl-token-metadata = "1.13.2"
base64 = "0.21.0"