[package]
name = "neoengine-cpu"
version = "0.1.0"
description = "CPU mining with NeoHash algorithm for NeoEngine"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "neoengine_cpu"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"