[package]
name = "neoengine-gpu"
version = "0.1.0"
description = "GPU VRAM pooling for ne0 AI training and inference"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "neoengine_gpu"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"