[package]
name = "neoengine-guilds"
version = "0.1.0"
description = "NeoGuild protocol for social mining and competition"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "neoengine_guilds"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"