[package]
name = "neoengine-linking"
version = "0.1.0"
description = "NeoLink and NeoChain protocols for device management"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "neoengine_linking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"