[package]
name = "neoengine-profile"
version = "0.1.0"
description = "NeoEngine Profile NFT with cosmetic equip/unequip system"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "neoengine_profile"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }