[package]
name = "neoengine-ram"
version = "0.1.0"
description = "RAM sharing for real-time operations and caching"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "neoengine_ram"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"