[package]
name = "neoengine-resources"
version = "0.1.0"
description = "Resource contribution tracking and optimization"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "neoengine_resources"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"