[package]
name = "neoengine-social"
version = "0.1.0"
description = "$DSX Reputation Scoring program for NeoEngine"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "neoengine_social"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"