[package]
name = "neoengine-storage"
version = "0.1.0"
description = "Distributed storage network for decentralized file system"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "neoengine_storage"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"